chore: implemented credentials/definitions/issuance endpoint
